Clear notebooks metadata

--- a/data/generate_aggregated_datasets.ipynb
+++ b/data/generate_aggregated_datasets.ipynb
@@ -3,12 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "9f031ce1",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-08-30T14:52:59.530778Z",
-     "start_time": "2021-08-30T14:52:28.858558Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "This notebook read the large train set, and produce aggregated data similar to those provided in the challenge.\n",
     "Those aggregated data are then saved on disk to use as input of the ML algos.\n",
@@ -17,14 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "eeefe999",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-08-30T15:30:01.136969Z",
-     "start_time": "2021-08-30T15:30:00.868006Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -33,14 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6e2e1a38",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-08-30T15:30:01.942784Z",
-     "start_time": "2021-08-30T15:30:01.939972Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "labels = [\"click\", \"sale\"]\n",
@@ -49,14 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "73d97c4a",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-08-30T15:31:54.417574Z",
-     "start_time": "2021-08-30T15:31:54.413873Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def aggregate_on_features(features, mincount, filename):\n",
@@ -69,14 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d00b92eb",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-08-30T15:31:55.201800Z",
-     "start_time": "2021-08-30T15:31:55.196102Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def aggregate_on_all_pairs(\n",
@@ -114,193 +89,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c879c4cf",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-08-30T20:37:36.753812Z",
-     "start_time": "2021-08-30T15:31:56.269116Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "aggregating on hash_0 hash_1\n",
-      "aggregating on hash_0 hash_2\n",
-      "aggregating on hash_0 hash_3\n",
-      "aggregating on hash_0 hash_4\n",
-      "aggregating on hash_0 hash_5\n",
-      "aggregating on hash_0 hash_6\n",
-      "aggregating on hash_0 hash_7\n",
-      "aggregating on hash_0 hash_8\n",
-      "aggregating on hash_0 hash_9\n",
-      "aggregating on hash_0 hash_10\n",
-      "aggregating on hash_0 hash_11\n",
-      "aggregating on hash_0 hash_12\n",
-      "aggregating on hash_0 hash_13\n",
-      "aggregating on hash_0 hash_14\n",
-      "aggregating on hash_0 hash_15\n",
-      "aggregating on hash_0 hash_16\n",
-      "aggregating on hash_0 hash_17\n",
-      "aggregating on hash_0 hash_18\n",
-      "aggregating on hash_1 hash_2\n",
-      "aggregating on hash_1 hash_3\n",
-      "aggregating on hash_1 hash_4\n",
-      "aggregating on hash_1 hash_5\n",
-      "aggregating on hash_1 hash_6\n",
-      "aggregating on hash_1 hash_7\n",
-      "aggregating on hash_1 hash_8\n",
-      "aggregating on hash_1 hash_9\n",
-      "aggregating on hash_1 hash_10\n",
-      "aggregating on hash_1 hash_11\n",
-      "aggregating on hash_1 hash_12\n",
-      "aggregating on hash_1 hash_13\n",
-      "aggregating on hash_1 hash_14\n",
-      "aggregating on hash_1 hash_15\n",
-      "aggregating on hash_1 hash_16\n",
-      "aggregating on hash_1 hash_17\n",
-      "aggregating on hash_1 hash_18\n",
-      "aggregating on hash_2 hash_3\n",
-      "aggregating on hash_2 hash_4\n",
-      "aggregating on hash_2 hash_5\n",
-      "aggregating on hash_2 hash_6\n",
-      "aggregating on hash_2 hash_7\n",
-      "aggregating on hash_2 hash_8\n",
-      "aggregating on hash_2 hash_9\n",
-      "aggregating on hash_2 hash_10\n",
-      "aggregating on hash_2 hash_11\n",
-      "aggregating on hash_2 hash_12\n",
-      "aggregating on hash_2 hash_13\n",
-      "aggregating on hash_2 hash_14\n",
-      "aggregating on hash_2 hash_15\n",
-      "aggregating on hash_2 hash_16\n",
-      "aggregating on hash_2 hash_17\n",
-      "aggregating on hash_2 hash_18\n",
-      "aggregating on hash_3 hash_4\n",
-      "aggregating on hash_3 hash_5\n",
-      "aggregating on hash_3 hash_6\n",
-      "aggregating on hash_3 hash_7\n",
-      "aggregating on hash_3 hash_8\n",
-      "aggregating on hash_3 hash_9\n",
-      "aggregating on hash_3 hash_10\n",
-      "aggregating on hash_3 hash_11\n",
-      "aggregating on hash_3 hash_12\n",
-      "aggregating on hash_3 hash_13\n",
-      "aggregating on hash_3 hash_14\n",
-      "aggregating on hash_3 hash_15\n",
-      "aggregating on hash_3 hash_16\n",
-      "aggregating on hash_3 hash_17\n",
-      "aggregating on hash_3 hash_18\n",
-      "aggregating on hash_4 hash_5\n",
-      "aggregating on hash_4 hash_6\n",
-      "aggregating on hash_4 hash_7\n",
-      "aggregating on hash_4 hash_8\n",
-      "aggregating on hash_4 hash_9\n",
-      "aggregating on hash_4 hash_10\n",
-      "aggregating on hash_4 hash_11\n",
-      "aggregating on hash_4 hash_12\n",
-      "aggregating on hash_4 hash_13\n",
-      "aggregating on hash_4 hash_14\n",
-      "aggregating on hash_4 hash_15\n",
-      "aggregating on hash_4 hash_16\n",
-      "aggregating on hash_4 hash_17\n",
-      "aggregating on hash_4 hash_18\n",
-      "aggregating on hash_5 hash_6\n",
-      "aggregating on hash_5 hash_7\n",
-      "aggregating on hash_5 hash_8\n",
-      "aggregating on hash_5 hash_9\n",
-      "aggregating on hash_5 hash_10\n",
-      "aggregating on hash_5 hash_11\n",
-      "aggregating on hash_5 hash_12\n",
-      "aggregating on hash_5 hash_13\n",
-      "aggregating on hash_5 hash_14\n",
-      "aggregating on hash_5 hash_15\n",
-      "aggregating on hash_5 hash_16\n",
-      "aggregating on hash_5 hash_17\n",
-      "aggregating on hash_5 hash_18\n",
-      "aggregating on hash_6 hash_7\n",
-      "aggregating on hash_6 hash_8\n",
-      "aggregating on hash_6 hash_9\n",
-      "aggregating on hash_6 hash_10\n",
-      "aggregating on hash_6 hash_11\n",
-      "aggregating on hash_6 hash_12\n",
-      "aggregating on hash_6 hash_13\n",
-      "aggregating on hash_6 hash_14\n",
-      "aggregating on hash_6 hash_15\n",
-      "aggregating on hash_6 hash_16\n",
-      "aggregating on hash_6 hash_17\n",
-      "aggregating on hash_6 hash_18\n",
-      "aggregating on hash_7 hash_8\n",
-      "aggregating on hash_7 hash_9\n",
-      "aggregating on hash_7 hash_10\n",
-      "aggregating on hash_7 hash_11\n",
-      "aggregating on hash_7 hash_12\n",
-      "aggregating on hash_7 hash_13\n",
-      "aggregating on hash_7 hash_14\n",
-      "aggregating on hash_7 hash_15\n",
-      "aggregating on hash_7 hash_16\n",
-      "aggregating on hash_7 hash_17\n",
-      "aggregating on hash_7 hash_18\n",
-      "aggregating on hash_8 hash_9\n",
-      "aggregating on hash_8 hash_10\n",
-      "aggregating on hash_8 hash_11\n",
-      "aggregating on hash_8 hash_12\n",
-      "aggregating on hash_8 hash_13\n",
-      "aggregating on hash_8 hash_14\n",
-      "aggregating on hash_8 hash_15\n",
-      "aggregating on hash_8 hash_16\n",
-      "aggregating on hash_8 hash_17\n",
-      "aggregating on hash_8 hash_18\n",
-      "aggregating on hash_9 hash_10\n",
-      "aggregating on hash_9 hash_11\n",
-      "aggregating on hash_9 hash_12\n",
-      "aggregating on hash_9 hash_13\n",
-      "aggregating on hash_9 hash_14\n",
-      "aggregating on hash_9 hash_15\n",
-      "aggregating on hash_9 hash_16\n",
-      "aggregating on hash_9 hash_17\n",
-      "aggregating on hash_9 hash_18\n",
-      "aggregating on hash_10 hash_11\n",
-      "aggregating on hash_10 hash_12\n",
-      "aggregating on hash_10 hash_13\n",
-      "aggregating on hash_10 hash_14\n",
-      "aggregating on hash_10 hash_15\n",
-      "aggregating on hash_10 hash_16\n",
-      "aggregating on hash_10 hash_17\n",
-      "aggregating on hash_10 hash_18\n",
-      "aggregating on hash_11 hash_12\n",
-      "aggregating on hash_11 hash_13\n",
-      "aggregating on hash_11 hash_14\n",
-      "aggregating on hash_11 hash_15\n",
-      "aggregating on hash_11 hash_16\n",
-      "aggregating on hash_11 hash_17\n",
-      "aggregating on hash_11 hash_18\n",
-      "aggregating on hash_12 hash_13\n",
-      "aggregating on hash_12 hash_14\n",
-      "aggregating on hash_12 hash_15\n",
-      "aggregating on hash_12 hash_16\n",
-      "aggregating on hash_12 hash_17\n",
-      "aggregating on hash_12 hash_18\n",
-      "aggregating on hash_13 hash_14\n",
-      "aggregating on hash_13 hash_15\n",
-      "aggregating on hash_13 hash_16\n",
-      "aggregating on hash_13 hash_17\n",
-      "aggregating on hash_13 hash_18\n",
-      "aggregating on hash_14 hash_15\n",
-      "aggregating on hash_14 hash_16\n",
-      "aggregating on hash_14 hash_17\n",
-      "aggregating on hash_14 hash_18\n",
-      "aggregating on hash_15 hash_16\n",
-      "aggregating on hash_15 hash_17\n",
-      "aggregating on hash_15 hash_18\n",
-      "aggregating on hash_16 hash_17\n",
-      "aggregating on hash_16 hash_18\n",
-      "aggregating on hash_17 hash_18\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "## This may take severals hours:\n",
     "# - there are 19*18/2 = 171 pairs of features to process,\n",
@@ -311,14 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a3a63edd",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-08-30T20:38:09.743081Z",
-     "start_time": "2021-08-30T20:37:36.755656Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "allpairsdf.to_csv(\"aggregated_pairs.csv\", index=True)\n"
@@ -326,14 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3f63b35e",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-08-30T21:03:14.676007Z",
-     "start_time": "2021-08-30T21:03:14.670911Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def aggregate_on_all_single(\n",
@@ -357,55 +139,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1d2baf46",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-08-30T21:34:46.446482Z",
-     "start_time": "2021-08-30T21:03:17.458027Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "aggregating on hash_0\n",
-      "aggregating on hash_1\n",
-      "aggregating on hash_2\n",
-      "aggregating on hash_3\n",
-      "aggregating on hash_4\n",
-      "aggregating on hash_5\n",
-      "aggregating on hash_6\n",
-      "aggregating on hash_7\n",
-      "aggregating on hash_8\n",
-      "aggregating on hash_9\n",
-      "aggregating on hash_10\n",
-      "aggregating on hash_11\n",
-      "aggregating on hash_12\n",
-      "aggregating on hash_13\n",
-      "aggregating on hash_14\n",
-      "aggregating on hash_15\n",
-      "aggregating on hash_16\n",
-      "aggregating on hash_17\n",
-      "aggregating on hash_18\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "allsingles = aggregate_on_all_single(allfeatures)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "116a4fe3",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-08-30T21:34:48.318613Z",
-     "start_time": "2021-08-30T21:34:46.448014Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "allsingles.to_csv(\"aggregated_singles.csv\", index=True)\n"
@@ -431,8 +177,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
