--- a/gbt/main_clicks.ipynb
+++ b/gbt/main_clicks.ipynb
@@ -12,12 +12,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d23732cd",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-01-14T18:02:58.769661Z",
-     "start_time": "2022-01-14T18:02:57.785146Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -43,12 +38,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bb8cc362",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-01-14T18:03:11.118181Z",
-     "start_time": "2022-01-14T18:02:58.771898Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "DATA_DIR = \"../data\"\n",
@@ -100,12 +90,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c42854f4",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-01-14T18:03:11.127911Z",
-     "start_time": "2022-01-14T18:03:11.122197Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "LOGFILE = \"results_agg_gbt_clicks.log\"\n",
@@ -141,12 +126,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0908c8b6",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-01-14T18:03:11.149746Z",
-     "start_time": "2022-01-14T18:03:11.129355Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class AggClickEncoder:\n",
@@ -322,12 +302,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3789bcfb",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-01-14T18:03:11.155849Z",
-     "start_time": "2022-01-14T18:03:11.151398Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def LLH(prediction, y):\n",
@@ -360,12 +335,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1ff06953",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-01-14T18:03:11.166894Z",
-     "start_time": "2022-01-14T18:03:11.157482Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def train(X_train, X_valid, y_train, y_valid, lgb_params):\n",
@@ -441,13 +411,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "73b2fe04",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-01-14T18:07:18.935263Z",
-     "start_time": "2022-01-14T18:03:11.168693Z"
-    },
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_and_log(\"Baseline\")\n",
@@ -471,13 +435,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2a08789f",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-01-14T21:31:49.218651Z",
-     "start_time": "2022-01-14T18:07:18.936809Z"
-    },
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_and_log(\"Benching noise robustness with prior weight\")\n",
@@ -521,12 +479,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b93ce07c",
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2022-01-14T18:02:58.592Z"
-    },
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_and_log(\"Benching performances as a function of number of available granular samples\")\n",
@@ -575,8 +528,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
