--- a/gbt/main_sales.ipynb
+++ b/gbt/main_sales.ipynb
@@ -12,12 +12,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d23732cd",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-11-21T22:08:13.119821Z",
-     "start_time": "2021-11-21T22:08:12.207050Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -43,12 +38,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bb8cc362",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-11-21T22:08:34.276802Z",
-     "start_time": "2021-11-21T22:08:13.360355Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "DATA_DIR = \"../data\"\n",
@@ -100,12 +90,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c42854f4",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-11-21T22:08:34.281416Z",
-     "start_time": "2021-11-21T22:08:34.278661Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "LOGFILE = \"results_agg_gbt_sales.log\"\n",
@@ -141,12 +126,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0908c8b6",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-11-21T22:08:34.328093Z",
-     "start_time": "2021-11-21T22:08:34.282711Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class AggClickEncoder:\n",
@@ -549,12 +529,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d610272b",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-11-21T22:08:34.332774Z",
-     "start_time": "2021-11-21T22:08:34.329167Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def LLH(prediction, y):\n",
@@ -587,12 +562,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1ff06953",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-11-21T22:08:34.344170Z",
-     "start_time": "2021-11-21T22:08:34.333713Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def train(X_train, X_valid, y_train, y_valid, lgb_params):\n",
@@ -701,13 +671,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "73b2fe04",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-11-24T09:20:23.706223Z",
-     "start_time": "2021-11-24T09:19:45.006679Z"
-    },
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_and_log(\"Baseline\")\n",
@@ -788,13 +752,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b93ce07c",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-11-24T09:13:29.944884Z",
-     "start_time": "2021-11-23T10:15:17.822862Z"
-    },
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_and_log(\"Benching performances as a function of number of available granular samples\")\n",
@@ -845,8 +803,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
