--- a/logistic_regression/encode_data.ipynb
+++ b/logistic_regression/encode_data.ipynb
@@ -3,12 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "208c6505",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-09T13:36:57.783318Z",
-     "start_time": "2021-09-09T13:36:45.787671Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "This notebook preprocess the aggregated data and the small granular sets, to preprare for training a logistic regression with granular data and  aggregated labels, following the method proposed by the challenge winners.\n",
     "Here we one-hot encode in a common space the modalities of each feature and the pairs of modalities of each pair of feature.\n",
@@ -26,12 +21,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ecc62dbf",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:43:47.783944Z",
-     "start_time": "2021-09-10T08:43:46.572734Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Common libs to import everywhere\n",
@@ -51,12 +41,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ac0b9e89",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:43:47.922245Z",
-     "start_time": "2021-09-10T08:43:47.785330Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "!cat '../data/aggregated_singles.csv' | head -2"
@@ -66,12 +51,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9f138862",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:43:47.925891Z",
-     "start_time": "2021-09-10T08:43:47.923730Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "COL_singles_mod = 0\n",
@@ -85,12 +65,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cdbf1a3c",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:43:57.104111Z",
-     "start_time": "2021-09-10T08:43:47.927026Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Xy_agg_data_singles = np.loadtxt(\"../data/aggregated_singles.csv\", skiprows=1, delimiter=\",\", dtype=np.int32)[:, 1:]\n"
@@ -100,12 +75,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "75c05796",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:43:57.242637Z",
-     "start_time": "2021-09-10T08:43:57.105743Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "!cat '../data/aggregated_pairs.csv' | head -2"
@@ -115,12 +85,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "978a1fe1",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:43:57.246308Z",
-     "start_time": "2021-09-10T08:43:57.243913Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "COL_pairs_mod1 = 0\n",
@@ -136,12 +101,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6377ab4e",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:46:19.437850Z",
-     "start_time": "2021-09-10T08:43:57.248118Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Xy_agg_data_full = np.loadtxt(\"../data/aggregated_pairs.csv\", skiprows=1, delimiter=\",\", dtype=np.int32)[:, 1:]\n",
@@ -152,12 +112,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "62e1e024",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:46:19.592966Z",
-     "start_time": "2021-09-10T08:46:19.439196Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "!cat '../data/X_test.csv' | head -2"
@@ -167,12 +122,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "42f8b268",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:46:33.704311Z",
-     "start_time": "2021-09-10T08:46:19.594281Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Almost 1M granular unlabeled samples from the Test set\n",
@@ -185,12 +135,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ded03fcf",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:47:28.478926Z",
-     "start_time": "2021-09-10T08:46:33.705372Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# More granular samples, from another set to compare perfs.\n",
@@ -203,12 +148,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d7d612c9",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:48:05.426399Z",
-     "start_time": "2021-09-10T08:47:28.479980Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Labels  (Used for computing validation score, not used for training!)\n",
@@ -224,12 +164,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "009eed76",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:48:05.429754Z",
-     "start_time": "2021-09-10T08:48:05.428003Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## to run faster -> remove crosses with small volume\n",
@@ -244,12 +179,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0cac7f5b",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:48:05.498778Z",
-     "start_time": "2021-09-10T08:48:05.430759Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "gc.collect()\n"
@@ -267,12 +197,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d37343aa",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:48:05.502343Z",
-     "start_time": "2021-09-10T08:48:05.499745Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# features =sorted(set( Xy_agg_data_singles[:,COL_singles_fid] ))\n",
@@ -284,12 +209,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0a7c1452",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:48:05.860304Z",
-     "start_time": "2021-09-10T08:48:05.503253Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## One-hot encoding all modalities\n",
@@ -309,12 +229,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7235d63f",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:48:05.864549Z",
-     "start_time": "2021-09-10T08:48:05.861426Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.array([len(modalities_per_feature[f]) for f in modalities_per_feature])\n"
@@ -324,12 +239,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ae421bc3",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:48:05.867733Z",
-     "start_time": "2021-09-10T08:48:05.865635Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def encode_feature(modalities, dico):\n",
@@ -340,12 +250,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0a9f953a",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:48:27.080615Z",
-     "start_time": "2021-09-10T08:48:05.868820Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for f in features:\n",
@@ -357,12 +262,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "59dc34ff",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:48:27.919087Z",
-     "start_time": "2021-09-10T08:48:27.081836Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Replacing features by one-hot index in Xy_agg_data_singles\n",
@@ -375,12 +275,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "af907f05",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:48:52.461643Z",
-     "start_time": "2021-09-10T08:48:27.920257Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Replacing features by one-hot index in Xy_agg_data\n",
@@ -405,12 +300,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c363521d",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:49:01.860265Z",
-     "start_time": "2021-09-10T08:48:52.463111Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pairs = sorted(set([(a[COL_pairs_fid1], a[COL_pairs_fid2]) for a in Xy_agg_data_full]))\n",
@@ -421,12 +311,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "058a5342",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:49:01.865411Z",
-     "start_time": "2021-09-10T08:49:01.862377Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def encode_cf(x, f, f2, dico):\n",
@@ -442,12 +327,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "00da6a61",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T08:49:01.868236Z",
-     "start_time": "2021-09-10T08:49:01.866510Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "COL_pairs_encodedpair = 0  ## reusing this colum\n"
@@ -457,12 +337,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "01aa1cad",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T09:44:38.673676Z",
-     "start_time": "2021-09-10T08:49:01.869240Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "offset_pairs = offset\n",
@@ -500,12 +375,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8acd8945",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T09:44:39.734104Z",
-     "start_time": "2021-09-10T09:44:38.674822Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "D = np.zeros(offset_pairs)\n",
@@ -535,12 +405,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5ae3e12c",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T09:44:39.742292Z",
-     "start_time": "2021-09-10T09:44:39.735254Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nb_samples_agg = Xy_agg_data_singles[Xy_agg_data_singles[:, COL_singles_fid] == 0][:, COL_singles_counts].sum()\n"
@@ -550,12 +415,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "577b5c68",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-10T11:57:10.686867Z",
-     "start_time": "2021-09-10T11:56:53.430163Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "name = f\"../data/encodedAggData_C_D_S_X_Xbis_n_pairs\"\n",
@@ -582,8 +442,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
