--- a/logistic_regression/main.ipynb
+++ b/logistic_regression/main.ipynb
@@ -4,12 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6516b5db",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-17T12:52:00.743189Z",
-     "start_time": "2021-09-17T12:51:43.263958Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Common libs to import everywhere\n",
@@ -31,12 +26,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4197c2be",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-17T12:52:00.748467Z",
-     "start_time": "2021-09-17T12:52:00.745958Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "name = f\"../data/encodedAggData_C_D_S_X_Xbis_n_pairs.npz\"\n"
@@ -46,12 +36,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9d8360c3",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-17T12:52:42.752941Z",
-     "start_time": "2021-09-17T12:52:00.750768Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data = np.load(name)\n",
@@ -68,12 +53,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "14b43e27",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-17T12:53:39.328994Z",
-     "start_time": "2021-09-17T12:52:42.756293Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Labels  (Used for computing validation score, not used for training!)\n",
@@ -101,12 +81,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c96af1bd",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-17T12:53:39.337976Z",
-     "start_time": "2021-09-17T12:53:39.331618Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "run_on_sales = True\n",
@@ -128,12 +103,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "57c78219",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-17T12:53:39.344083Z",
-     "start_time": "2021-09-17T12:53:39.341005Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def print_and_log(x):\n",
@@ -146,12 +116,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "96efd69b",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-17T12:53:39.373397Z",
-     "start_time": "2021-09-17T12:53:39.346521Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def logit(x):\n",
@@ -277,12 +242,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "60ceac07",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-17T12:53:43.459722Z",
-     "start_time": "2021-09-17T12:53:39.375230Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Compiling numba\n",
@@ -297,12 +257,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5f28d25a",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-17T12:53:43.476230Z",
-     "start_time": "2021-09-17T12:53:43.462618Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def run(\n",
@@ -378,12 +333,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a534ebd6",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-17T12:53:43.486247Z",
-     "start_time": "2021-09-17T12:53:43.478234Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def run_(\n",
@@ -454,12 +404,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "da96e07c",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-17T12:53:43.491299Z",
-     "start_time": "2021-09-17T12:53:43.487870Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nb_train_samples = len(X_test)\n",
@@ -470,12 +415,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7cae6f91",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-17T12:58:49.688997Z",
-     "start_time": "2021-09-17T12:53:43.492872Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "default_l2 = 1_000\n",
@@ -494,12 +434,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4b61c77c",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-17T13:53:48.645613Z",
-     "start_time": "2021-09-17T12:58:49.691557Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_and_log(\"Benching L2\")\n",
@@ -519,11 +454,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3b0be392",
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2021-09-17T12:51:43.232Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_and_log(\"Benching L2 with train_with_X_test = False\")\n",
@@ -543,11 +474,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "866b091d",
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2021-09-17T12:51:43.236Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_and_log(\"Benching alpha\")\n",
@@ -568,11 +495,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "833d9412",
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2021-09-17T12:51:43.238Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print_and_log(\"Benching maxiter\")\n",
@@ -593,11 +516,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "39ec512a",
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2021-09-17T12:51:43.246Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## no rescaling\n",
@@ -619,11 +538,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dbe76842",
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2021-09-17T12:51:43.251Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## trainWithXTest = False, changing nbsamples\n",
@@ -647,11 +562,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e294bc1a",
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2021-09-17T12:51:43.254Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## With noise; and quick l2 bench\n",
@@ -692,8 +603,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
